--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,8 @@
 [submodule "kernel"]
-	path = kernel
-	url = git@github.com:ngocho31/linux.git
-	branch = bbb_6.7
+    path = kernel
+    url = git@github.com:ngocho31/linux.git
+    branch = bbb_6.7
+[submodule "bootloader"]
+	path = bootloader
+	url = git@github.com:ngocho31/u-boot.git
+	branch = bbb_v2024.04
