--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
     path = bootloader
     url = git@github.com:ngocho31/u-boot.git
     branch = bbb_v2024.04
+[submodule "busybox"]
+    path = busybox
+    url = git@github.com:ngocho31/busybox.git
+    branch = bbb_1.37
